# inline-spirv-rs

./: .gitignore  Cargo.toml  README.md
examples/demo/: main.rs
examples/demo/assets/: counter.hlsl
inline-spirv/: Cargo.toml  README.md
inline-spirv/examples/demo/: main.rs
inline-spirv/examples/demo/assets/: demo.comp  demo.comp.spv  demo.hlsl  shader.wgsl
inline-spirv/src/: lib.rs
inline-spirv/src/backends/: mod.rs  spirq_spvasm.rs
jit-spirv/: Cargo.toml  README.md
jit-spirv-impl/: Cargo.toml  README.md
jit-spirv-impl/src/: lib.rs
jit-spirv-impl/src/backends/: naga.rs  shaderc.rs
jit-spirv/examples/jit/: main.rs
jit-spirv/src/: dep.rs  lib.rs
src/: lib.rs
src/backends/: naga.rs  shaderc.rs
