[package]
name = "inline-spirv"
version = "0.1.0"
authors = ["PENGUINLIONG <admin@penguinliong.moe>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
shaderc = { version = "0.6.2", features = [ "build-from-source" ] }
syn = "1.0.38"
quote = "1.0.7"

[dev-dependencies]
spirq = "0.4.4"
log = "0.4.11"
env_logger = "0.7.1"
