[package]
name = "inline-spirv"
version = "0.1.1"
authors = ["PENGUINLIONG <admin@penguinliong.moe>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Compile GLSL/HLSL and inline SPIR-V right inside your crate."
repository = "https://github.com/PENGUINLIONG/inline-spirv-rs"
readme = "README.md"
documentation = "https://docs.rs/inline-spirv-rs"
homepage = "https://github.com/PENGUINLIONG/inline-spirv-rs"
categories = ["graphics"]

[lib]
proc-macro = true

[features]
build-from-source = ["shaderc/build-from-source"]

[dependencies]
shaderc = "0.6.2"
syn = "1.0.38"
quote = "1.0.7"

[dev-dependencies]
spirq = "0.4.4"
log = "0.4.11"
env_logger = "0.7.1"
