[package]
name = "jit-spirv"
version = "0.1.1"
authors = ["PENGUINLIONG <admin@penguinliong.moe>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Compile GLSL/HLSL/WGSL to SPIR-V just-in-time with a simple macro."
repository = "https://github.com/PENGUINLIONG/inline-spirv-rs"
readme = "README.md"
documentation = "https://docs.rs/inline-spirv-rs"
homepage = "https://github.com/PENGUINLIONG/inline-spirv-rs"
categories = ["graphics"]

[features]
default = ["glsl", "hlsl", "wgsl"]
build-from-source = ["shaderc", "shaderc/build-from-source"]
wgsl = ["naga"]
hlsl = ["shaderc"]
glsl = ["shaderc"]
shaderc = ["dep:shaderc", "jit-spirv-impl/shaderc"]
naga = ["dep:naga", "jit-spirv-impl/naga"]

[dependencies]
jit-spirv-impl = { version = "0.1.0", path = "../jit-spirv-impl"}
shaderc = { version = ">=0.7.2, <=0.8", optional = true }
naga = { version = ">=0.5", features = ["wgsl-in", "spv-out"], optional = true }

[dev-dependencies]
spirq = "0.6"
